--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
 <body>
   <h1>Hello World</h1>
   <p>I'm hosted with GitHub Pages.</p>
-  <a class="btn" href=".pdf" download>PDF 다운로드</a>
+  <a class="btn" href="main.cpp" download>cpp 다운로드</a>
 </body>
 </html>
